refactor: JwtAuthenticationFilter를 username 기반으로 변경하고 권한 체크 구조 반영