@@ -3,6 +3,7 @@ package com.springbootjwtauth.filter;
 import com.springbootjwtauth.exception.CustomException;
 import com.springbootjwtauth.exception.ErrorCode;
 import com.springbootjwtauth.model.User;
+import com.springbootjwtauth.store.UserStore;
 import com.springbootjwtauth.util.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -10,24 +11,19 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
-    private final Map<String, User> userStore;
+    private final UserStore userStore;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -35,38 +31,44 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                                     FilterChain filterChain)
             throws ServletException, IOException {
 
-        // 1. Authorization 헤더에서 토큰 추출
-        String authHeader = request.getHeader("Authorization");
+        try {
+            // 1. Authorization 헤더에서 토큰 추출
+            String authHeader = request.getHeader("Authorization");
 
-        if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            String token = authHeader.substring(7);
+            if (authHeader != null && authHeader.startsWith("Bearer ")) {
+                String token = authHeader.substring(7);
+                // 2. 토큰 유효성 검사
+                jwtUtil.validateToken(token);
 
-            // 2. 토큰 유효성 검사
-            if (jwtUtil.validateToken(token)) {
-                UUID userId = jwtUtil.getUserIdFromToken(token);
-                // 3. userId로 사용자 조회
-                User user = userStore.values().stream()
-                        .filter(u -> u.getId().equals(userId))
-                        .findFirst()
-                        .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+                // 3. username
+                String username = jwtUtil.getUsernameFromToken(token);
+                User user = userStore.findByUsername(username);
+                if (user == null) throw new CustomException(ErrorCode.USER_NOT_FOUND);
 
                 // 4. 사용자 역할(Role) → Spring 권한(GrantedAuthority) 변환
-                List<GrantedAuthority> authorities = user.getRoles().stream()
+                List<SimpleGrantedAuthority> authorities = user.getRoles().stream()
                         .map(role -> new SimpleGrantedAuthority("ROLE_" + role.name()))
-                        .collect(Collectors.toList());
+                        .toList();
 
 
                 // 5. 간단한 인증 객체 생성 및 SecurityContext 등록
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(userId, null, authorities);
+                        new UsernamePasswordAuthenticationToken(username, null, authorities);
                 authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
                 SecurityContextHolder.getContext().setAuthentication(authentication);
             }
-        }
 
         // 6. 다음 필터로 진행
         filterChain.doFilter(request, response);
+    }catch(
+    CustomException e)
+
+    {
+        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+        response.setContentType("application/json;charset=UTF-8");
+        response.getWriter().write("{\"error\": {\"code\": \"" + e.getErrorCode().name() + "\", \"message\": \"" + e.getErrorCode().getMessage() + "\"}}");
     }
+}
 }
 
